feat(Exception): Adder & Delimiter 예외 처리
Adder와 Delimiter에서 발생 가능한 예외에 관해 처리하였음.

세부 구현 사항:
- DelimiterValidator를 통해 잘못된 구분자에 관한 예외 처리 추가
- CustomDelimiter와 ComplexDelimiter에 예외 로직 추가
- Adder에서 try-catch로 예외 처리 추가
- 예외 테스트 추가